--- a/projects/1.18/assets/auxiliaryblocks/lang/zh_cn.json
+++ b/projects/1.18/assets/auxiliaryblocks/lang/zh_cn.json
@@ -1,9 +1,9 @@
 {
   "itemGroup.auxiliaryblocks": "辅助方块",
-  "itemGroup.auxiliaryblocks.xmas": "圣诞节的辅助方块",
+  "itemGroup.auxiliaryblocks.xmas": "辅助方块|圣诞节",
   "block.auxiliaryblocks.ornament_red": "红色装饰块",
   "block.auxiliaryblocks.ornament_purple": "紫色装饰块",
-  "block.auxiliaryblocks.ornament_pink": "粉色装饰块",
+  "block.auxiliaryblocks.ornament_pink": "粉红色装饰块",
   "block.auxiliaryblocks.ornament_orange": "橙色装饰块",
   "block.auxiliaryblocks.ornament_magenta": "品红色装饰块",
   "block.auxiliaryblocks.ornament_lime": "黄绿色装饰块",
@@ -16,15 +16,15 @@
   "block.auxiliaryblocks.gumdrop_green": "绿色橡皮糖",
   "block.auxiliaryblocks.lollipop_green": "绿色棒棒糖",
   "block.auxiliaryblocks.lollipop_blue": "蓝色棒棒糖",
-  "block.auxiliaryblocks.lollipop_pink": "粉色棒棒糖",
+  "block.auxiliaryblocks.lollipop_pink": "粉红色棒棒糖",
   "block.auxiliaryblocks.lollipop_stick": "糖果棒",
-  "block.auxiliaryblocks.drippy_icing_block": "潮湿的糖霜方块",
-  "block.auxiliaryblocks.gingerbread_candied_block": "蜜饯姜饼方块",
-  "block.auxiliaryblocks.gingerbread_icing_block": "糖霜姜饼方块",
+  "block.auxiliaryblocks.drippy_icing_block": "潮湿糖霜方块",
+  "block.auxiliaryblocks.gingerbread_candied_block": "糖果姜饼糖霜方块",
+  "block.auxiliaryblocks.gingerbread_icing_block": "姜饼糖霜方块",
   "block.auxiliaryblocks.gingerbread_block": "姜饼方块",
   "block.auxiliaryblocks.candy_cane_trapdoor": "拐杖糖活板门",
-  "block.auxiliaryblocks.candy_cane_block": "拐杖糖方块",
-  "block.auxiliaryblocks.festive_cake": "典藏蛋糕",
+  "block.auxiliaryblocks.candy_cane_block": "拐杖糖块",
+  "block.auxiliaryblocks.festive_cake": "节日蛋糕",
   "block.auxiliaryblocks.gingerbread_house": "姜饼屋",
   "block.auxiliaryblocks.cookie_pile": "饼干堆",
   "block.auxiliaryblocks.purple_diorite": "紫色闪长岩",
@@ -51,40 +51,40 @@
   "block.auxiliaryblocks.lab_yellow": "实验室方块",
   "block.auxiliaryblocks.concrete": "混凝土",
   "block.auxiliaryblocks.reinforced_concrete": "钢筋混凝土",
-  "block.auxiliaryblocks.nailed_reinforced_concrete": "钉子式钢筋混凝土",
+  "block.auxiliaryblocks.nailed_reinforced_concrete": "驻钉钢筋混凝土",
   "block.auxiliaryblocks.plated_concrete": "电镀混凝土",
   "block.auxiliaryblocks.rusty_sheet_metal": "生锈金属板",
-  "block.auxiliaryblocks.rusty_sheet_metal_section": "生锈金属板部分",
+  "block.auxiliaryblocks.rusty_sheet_metal_section": "生锈金属板部件",
   "block.auxiliaryblocks.rusty_trapdoor": "生锈活板门",
   "block.auxiliaryblocks.concrete_vent": "混凝土通风管",
   "block.auxiliaryblocks.sheet_metal": "金属板",
-  "block.auxiliaryblocks.sheet_metal_section": "金属板部分",
+  "block.auxiliaryblocks.sheet_metal_section": "金属板部件",
   "block.auxiliaryblocks.blue_pastel": "蓝色木板",
   "block.auxiliaryblocks.gray_pastel": "灰色木板",
   "block.auxiliaryblocks.green_pastel": "绿色木板",
   "block.auxiliaryblocks.orange_pastel": "橙色木板",
-  "block.auxiliaryblocks.pink_pastel": "粉色木板",
+  "block.auxiliaryblocks.pink_pastel": "粉红色木板",
   "block.auxiliaryblocks.purple_pastel": "紫色木板",
   "block.auxiliaryblocks.yellow_pastel": "黄色木板",
   "block.auxiliaryblocks.smooth_blue_pastel": "平滑蓝色木板",
   "block.auxiliaryblocks.smooth_gray_pastel": "平滑灰色木板",
   "block.auxiliaryblocks.smooth_green_pastel": "平滑绿色木板",
   "block.auxiliaryblocks.smooth_orange_pastel": "平滑橙色木板",
-  "block.auxiliaryblocks.smooth_pink_pastel": "平滑粉色木板",
+  "block.auxiliaryblocks.smooth_pink_pastel": "平滑粉红色木板",
   "block.auxiliaryblocks.smooth_purple_pastel": "平滑紫色木板",
   "block.auxiliaryblocks.smooth_yellow_pastel": "平滑黄色木板",
-  "block.auxiliaryblocks.plastic": "塑料",
-  "block.auxiliaryblocks.blue_plastic": "蓝色塑料",
-  "block.auxiliaryblocks.cyan_plastic": "青色塑料",
-  "block.auxiliaryblocks.dark_gray_plastic": "深灰色塑料",
-  "block.auxiliaryblocks.green_plastic": "绿色塑料",
-  "block.auxiliaryblocks.light_gray_plastic": "浅灰色塑料",
-  "block.auxiliaryblocks.orange_plastic": "橙色塑料",
-  "block.auxiliaryblocks.purple_plastic": "紫色塑料",
-  "block.auxiliaryblocks.red_plastic": "红色塑料",
-  "block.auxiliaryblocks.cobbled_sandstone": "砂岩圆石",
-  "block.auxiliaryblocks.dirty_sand": "粘土沙",
-  "block.auxiliaryblocks.mossy_dirt": "苔土",
+  "block.auxiliaryblocks.plastic": "塑料块",
+  "block.auxiliaryblocks.blue_plastic": "蓝色塑料块",
+  "block.auxiliaryblocks.cyan_plastic": "青色塑料块",
+  "block.auxiliaryblocks.dark_gray_plastic": "深灰色塑料块",
+  "block.auxiliaryblocks.green_plastic": "绿色塑料块",
+  "block.auxiliaryblocks.light_gray_plastic": "浅灰色塑料块",
+  "block.auxiliaryblocks.orange_plastic": "橙色塑料块",
+  "block.auxiliaryblocks.purple_plastic": "紫色塑料块",
+  "block.auxiliaryblocks.red_plastic": "红色塑料块",
+  "block.auxiliaryblocks.cobbled_sandstone": "碎砂岩",
+  "block.auxiliaryblocks.dirty_sand": "泥砂",
+  "block.auxiliaryblocks.mossy_dirt": "覆苔泥土",
   "block.auxiliaryblocks.mossy_stone": "苔藓石",
   "block.auxiliaryblocks.rocky_dirt": "碎石土",
   "block.auxiliaryblocks.rocky_sand": "岩砂",
@@ -109,7 +109,7 @@
   "block.auxiliaryblocks.lime_frameless_glass": "黄绿色无框玻璃",
   "block.auxiliaryblocks.magenta_frameless_glass": "品红色无框玻璃",
   "block.auxiliaryblocks.orange_frameless_glass": "橙色无框玻璃",
-  "block.auxiliaryblocks.pink_frameless_glass": "粉色无框玻璃",
+  "block.auxiliaryblocks.pink_frameless_glass": "粉红色无框玻璃",
   "block.auxiliaryblocks.purple_frameless_glass": "紫色无框玻璃",
   "block.auxiliaryblocks.red_frameless_glass": "红色无框玻璃",
   "block.auxiliaryblocks.white_frameless_glass": "白色无框玻璃",
@@ -133,7 +133,7 @@
   "item.auxiliaryblocks.lime_water_bucket": "黄绿色水桶",
   "item.auxiliaryblocks.magenta_water_bucket": "品红色水桶",
   "item.auxiliaryblocks.orange_water_bucket": "橙色水桶",
-  "item.auxiliaryblocks.pink_water_bucket": "粉色水桶",
+  "item.auxiliaryblocks.pink_water_bucket": "粉红色水桶",
   "item.auxiliaryblocks.purple_water_bucket": "紫色水桶",
   "item.auxiliaryblocks.red_water_bucket": "红色水桶",
   "item.auxiliaryblocks.white_water_bucket": "白色水桶",
@@ -149,7 +149,7 @@
   "fluid.auxiliaryblocks.lime_water": "黄绿色水",
   "fluid.auxiliaryblocks.magenta_water": "品红色水",
   "fluid.auxiliaryblocks.orange_water": "橙色水",
-  "fluid.auxiliaryblocks.pink_water": "粉色水",
+  "fluid.auxiliaryblocks.pink_water": "粉红色水",
   "fluid.auxiliaryblocks.purple_water": "紫色水",
   "fluid.auxiliaryblocks.red_water": "红色水",
   "fluid.auxiliaryblocks.white_water": "白色水",
@@ -162,5 +162,24 @@
   "item.auxiliaryblocks.gingerbread_man_giant_spawn_egg": "巨型姜饼人刷怪蛋",
   "entity.auxiliaryblocks.snowdood": "雪人",
   "entity.auxiliaryblocks.strong_snowball": "巨型雪球",
-  "item.auxiliaryblocks.snowdood_spawn_egg": "雪人刷怪蛋"
+  "item.auxiliaryblocks.snowdood_spawn_egg": "雪人刷怪蛋",
+  
+  
+  "_comment_": "以下为简体中文独有的通用机械联动修复文本",
+  "block.auxiliaryblocks.black_water": "黑色水",
+  "block.auxiliaryblocks.blue_water": "蓝色水",
+  "block.auxiliaryblocks.brown_water": "棕色水",
+  "block.auxiliaryblocks.cyan_water": "青色水",
+  "block.auxiliaryblocks.gray_water": "灰色水",
+  "block.auxiliaryblocks.green_water": "绿色水",
+  "block.auxiliaryblocks.light_blue_water": "浅蓝色水",
+  "block.auxiliaryblocks.light_gray_water": "浅灰色水",
+  "block.auxiliaryblocks.lime_water": "黄绿色水",
+  "block.auxiliaryblocks.magenta_water": "品红色水",
+  "block.auxiliaryblocks.orange_water": "橙色水",
+  "block.auxiliaryblocks.pink_water": "粉红色水",
+  "block.auxiliaryblocks.purple_water": "紫色水",
+  "block.auxiliaryblocks.red_water": "红色水",
+  "block.auxiliaryblocks.white_water": "白色水",
+  "block.auxiliaryblocks.yellow_water": "黄色水"
 }
