--- a/projects/1.18/assets/decorative_blocks/lang/zh_cn.json
+++ b/projects/1.18/assets/decorative_blocks/lang/zh_cn.json
@@ -1,59 +1,61 @@
 {
- "itemGroup.decorative_blocks.general": "装饰方块",
- "block.decorative_blocks.crimson_beam": "绯红支撑柱",
- "block.decorative_blocks.crimson_palisade": "绯红实心栅栏",
- "block.decorative_blocks.crimson_seat": "绯红椅子",
- "block.decorative_blocks.crimson_support": "绯红支架",
- "block.decorative_blocks.warped_beam": "诡异支撑柱",
- "block.decorative_blocks.warped_palisade": "诡异实心栅栏",
- "block.decorative_blocks.warped_seat": "诡异椅子",
- "block.decorative_blocks.warped_support": "诡异支架",
- "block.decorative_blocks.acacia_seat": "金合欢板凳",
- "block.decorative_blocks.oak_support": "橡木支架",
- "block.decorative_blocks.jungle_support": "从林木支架",
- "block.decorative_blocks.dark_oak_beam": "深色橡木支撑柱",
- "block.decorative_blocks.birch_seat": "白桦板凳",
- "block.decorative_blocks.chain": "大铁链",
- "block.decorative_blocks.dark_oak_support": "深色橡木支架",
- "block.decorative_blocks.brazier": "火炉",
- "block.decorative_blocks.soul_brazier": "灵魂火盆",
- "block.decorative_blocks.oak_palisade": "橡木实心栅栏",
- "block.decorative_blocks.spruce_palisade": "云杉实心栅栏",
- "block.decorative_blocks.dark_oak_seat": "深色橡木板凳",
- "block.decorative_blocks.jungle_beam": "从林木支撑柱",
- "block.decorative_blocks.jungle_palisade": "从林木实心栅栏",
- "block.decorative_blocks.acacia_support": "金合欢木支架",
- "block.decorative_blocks.birch_support": "白桦木支架",
- "block.decorative_blocks.spruce_beam": "云杉木支撑柱",
- "block.decorative_blocks.jungle_seat": "从林木板凳",
- "block.decorative_blocks.chandelier": "烛台",
- "block.decorative_blocks.soul_chandelier": "灵魂吊灯",
- "block.decorative_blocks.oak_beam": "橡木支撑柱",
- "block.decorative_blocks.dark_oak_palisade": "深色橡木实心栅栏",
- "block.decorative_blocks.acacia_palisade": "金合欢木实心栅栏",
- "block.decorative_blocks.birch_beam": "白桦木支撑柱",
- "block.decorative_blocks.oak_seat": "橡木板凳",
- "block.decorative_blocks.bar_panel": "铁栅栏板门",
- "block.decorative_blocks.acacia_beam": "金合欢木支撑柱",
- "block.decorative_blocks.birch_palisade": "白桦木实心栅栏",
- "block.decorative_blocks.stone_pillar": "石制支撑柱",
- "block.decorative_blocks.spruce_seat": "云杉木板凳",
- "block.decorative_blocks.rocky_dirt": "混有石子的泥土",
- "block.decorative_blocks.spruce_support": "云杉木支架",
- "block.decorative_blocks.bonfire": "篝火",
- "block.decorative_blocks.soul_bonfire": "灵魂篝火",
- "block.decorative_blocks.lattice": "木格栏门",
- "fluid.decorative_blocks.thatch": "茅草块",
- "block.decorative_blocks.thatch": "茅草块",
- "wiki.decorative_blocks.thatch": "用剪刀右键干草块获得.",
- "wiki.decorative_blocks.support.condition1": "§7潜行对着空气右键:",
- "wiki.decorative_blocks.support.behavior1": "§3将方块物倒置",
- "wiki.decorative_blocks.support.condition2": "§7用斧子右键:",
- "wiki.decorative_blocks.support.behavior2": "§3在大与小之间选择一方",
- "wiki.decorative_blocks.support.condition3": "§7在潜行时用斧子右键:",
- "wiki.decorative_blocks.support.behavior3": "§3隐藏/取消隐藏侧面",
- "wiki.decorative_blocks.seat": "§3潜行对着空气使用，以在不同配置之间切换。",
- "wiki.decorative_blocks.copy1": "§3默认功能为粘贴，潜行功能为复制",
- "wiki.decorative_blocks.copy2": "§3复制: %s",
- "message.decorative_blocks.invalid_bonfire_activator_config": "篝火点燃器配置错误!"
+  "itemGroup.decorative_blocks.general": "装饰方块",
+  "block.decorative_blocks.crimson_beam": "绯红木支撑柱",
+  "block.decorative_blocks.crimson_palisade": "绯红木实心栅栏",
+  "block.decorative_blocks.crimson_seat": "绯红木板凳",
+  "block.decorative_blocks.crimson_support": "绯红木支架",
+  "block.decorative_blocks.warped_beam": "诡异木支撑柱",
+  "block.decorative_blocks.warped_palisade": "诡异木实心栅栏",
+  "block.decorative_blocks.warped_seat": "诡异木板凳",
+  "block.decorative_blocks.warped_support": "诡异木支架",
+  "block.decorative_blocks.acacia_seat": "金合欢木板凳",
+  "block.decorative_blocks.oak_support": "橡木支架",
+  "block.decorative_blocks.jungle_support": "丛林木支架",
+  "block.decorative_blocks.dark_oak_beam": "深色橡木支撑柱",
+  "block.decorative_blocks.birch_seat": "白桦木板凳",
+  "block.decorative_blocks.chain": "大锁链",
+  "block.decorative_blocks.dark_oak_support": "深色橡木支架",
+  "block.decorative_blocks.brazier": "火炉",
+  "block.decorative_blocks.soul_brazier": "灵魂火炉",
+  "block.decorative_blocks.oak_palisade": "橡木实心栅栏",
+  "block.decorative_blocks.spruce_palisade": "云杉木实心栅栏",
+  "block.decorative_blocks.dark_oak_seat": "深色橡木板凳",
+  "block.decorative_blocks.jungle_beam": "丛林木支撑柱",
+  "block.decorative_blocks.jungle_palisade": "丛林木实心栅栏",
+  "block.decorative_blocks.acacia_support": "金合欢木支架",
+  "block.decorative_blocks.birch_support": "白桦木支架",
+  "block.decorative_blocks.spruce_beam": "云杉木支撑柱",
+  "block.decorative_blocks.jungle_seat": "丛林木板凳",
+  "block.decorative_blocks.chandelier": "烛台",
+  "block.decorative_blocks.soul_chandelier": "灵魂烛台",
+  "block.decorative_blocks.oak_beam": "橡木支撑柱",
+  "block.decorative_blocks.dark_oak_palisade": "深色橡木实心栅栏",
+  "block.decorative_blocks.acacia_palisade": "金合欢木实心栅栏",
+  "block.decorative_blocks.birch_beam": "白桦木支撑柱",
+  "block.decorative_blocks.oak_seat": "橡木板凳",
+  "block.decorative_blocks.bar_panel": "铁栅栏板",
+  "block.decorative_blocks.acacia_beam": "金合欢木支撑柱",
+  "block.decorative_blocks.birch_palisade": "白桦木实心栅栏",
+  "block.decorative_blocks.stone_pillar": "石柱",
+  "block.decorative_blocks.spruce_seat": "云杉木板凳",
+  "block.decorative_blocks.rocky_dirt": "碎石土",
+  "block.decorative_blocks.spruce_support": "云杉木支架",
+  "block.decorative_blocks.bonfire": "篝火",
+  "block.decorative_blocks.soul_bonfire": "灵魂篝火",
+  "block.decorative_blocks.lattice": "木格",
+  "fluid.decorative_blocks.thatch": "干草",
+  "block.decorative_blocks.thatch": "干草",
+
+  "wiki.decorative_blocks.thatch": "用剪刀剪开干草块。",
+  "wiki.decorative_blocks.support.condition1": "§7潜行时对空气右击：",
+  "wiki.decorative_blocks.support.behavior1": "§3翻转方块",
+  "wiki.decorative_blocks.support.condition2": "§7手持斧右击：",
+  "wiki.decorative_blocks.support.behavior2": "§3改变所看侧面大小",
+  "wiki.decorative_blocks.support.condition3": "§7潜行时手持斧右击：",
+  "wiki.decorative_blocks.support.behavior3": "§3显示/隐藏所看侧面",
+  "wiki.decorative_blocks.seat": "§3潜行时对空气按使用键以切换状态",
+  "wiki.decorative_blocks.copy1": "§3直接使用以粘贴，潜行使用以复制。",
+  "wiki.decorative_blocks.copy2": "§3已复制：%s",
+
+  "message.decorative_blocks.invalid_bonfire_activator_config": "篝火点火物品配置有误！"
 }
