--- a/projects/1.18/assets/vaultintegrations/lang/zh_cn.json
+++ b/projects/1.18/assets/vaultintegrations/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
-  "itemGroup.vaultintegrations": "Vault Integrations",
-  "block.vaultintegrations.altar_conduit": "祭品导管",
-  "item.vaultintegrations.speed_enhancement": "速度提升器",
-  "item.vaultintegrations.quantity_enhancement": "数量提升器",
-  "item.vaultintegrations.teleport_enhancement": "传输提升器"
+  "itemGroup.vaultintegrations": "宝库兼容",
+  "block.vaultintegrations.altar_conduit": "祭坛导管",
+  "item.vaultintegrations.speed_enhancement": "速度强化",
+  "item.vaultintegrations.quantity_enhancement": "数量强化",
+  "item.vaultintegrations.teleport_enhancement": "传送强化"
 }
