--- a/projects/1.16/assets/treasurebags/lang/zh_cn.json
+++ b/projects/1.16/assets/treasurebags/lang/zh_cn.json
@@ -1,17 +1,17 @@
 {
-  "command.treasurebags.give.invalid": "无效背包类型：%s",
-  "command.treasurebags.give.success": "把%1$sx%2$s给予%3$s",
-  "item.treasurebags.treasure_bag": "宝箱",
-  "item.treasurebags.treasure_bag.invalidType": "无效类型",
-  "item.treasurebags.treasure_bag.type": "类型：§r %s",
-  "item.treasurebags.treasure_bag.unknownType": "未知类型",
-  "bag.treasurebags.dungeon": "地牢袋",
-  "bag.treasurebags.ender": "末影袋",
-  "bag.treasurebags.food": "外卖袋",
-  "bag.treasurebags.ingots": "Smelter的聚会袋",
-  "bag.treasurebags.literacy": "读写袋",
-  "bag.treasurebags.nature": "自然袋",
-  "bag.treasurebags.player": "玩家袋",
-  "bag.treasurebags.spawn": "首次出生袋",
-  "bag.treasurebags.sticks_and_stones": "木棍和石头袋"
+	"bag.treasurebags.dungeon": "地牢宝袋",
+	"bag.treasurebags.ender": "末影宝袋",
+	"bag.treasurebags.food": "食物宝袋",
+	"bag.treasurebags.ingots": "冶锭宝袋",
+	"bag.treasurebags.literacy": "知识宝袋",
+	"bag.treasurebags.nature": "自然宝袋",
+	"bag.treasurebags.player": "玩家宝袋",
+	"bag.treasurebags.spawn": "新手宝袋",
+	"bag.treasurebags.sticks_and_stones": "木棍和石头宝袋",
+	"command.treasurebags.give.invalid": "无效宝袋类型：%s",
+	"command.treasurebags.give.success": "把%1$sx %2$s给予%3$s",
+	"item.treasurebags.treasure_bag": "珍宝袋",
+	"item.treasurebags.treasure_bag.invalidType": "无效类型",
+	"item.treasurebags.treasure_bag.type": "类型：§r%s",
+	"item.treasurebags.treasure_bag.unknownType": "未知类型"
 }
