--- a/projects/1.19+/assets/endrem/lang/zh_cn.json
+++ b/projects/1.19+/assets/endrem/lang/zh_cn.json
@@ -1,26 +1,117 @@
 {
-	"item.endrem.cursed_eye": "诅咒之眼",
-	"item.endrem.cursed_eye.description": "§7§o一种强大且具有破坏性的制品；猪灵发誓要以生命为代价保护它",
-	"item.endrem.exotic_eye": "奇异之眼",
-	"item.endrem.exotic_eye.description": "§7§o那些寻找这只眼睛的人再也没有出现过；谣言说他们尝试找到了亚特兰蒂斯这座失落之城，但是迷路了",
-	"item.endrem.evil_eye": "恶魔之眼",
-	"item.endrem.evil_eye.description": "§7§o一种神圣的护身符，据说可以保护主人免受厄运",
-	"item.endrem.undead_eye": "不死之眼",
-	"item.endrem.undead_eye.description": "§7§o纪念那些死者的过往",
-	"item.endrem.cryptic_eye": "神秘之眼",
-	"item.endrem.cryptic_eye.description": "§7§o§khttps://www.youtube.com/watch?v=dQw4w9WgXcQ",
-	"item.endrem.undead_soul": "不死之魂",
-	"block.endrem.ender_eye.warning": "这只眼睛不愿被使用",
-	"block.endrem.custom_eye.place": "这只眼睛已经放好了",
-	"block.endrem.custom_eye.frame_has_eye": "这个框架已经有一只眼睛了",
-	"advancements.main.cursed_eye.title": "一个新守卫者……",
-	"advancements.main.cursed_eye.description": "你获得了第一只诅咒之眼",
-	"advancements.main.evil_eye.title": "真挚的祝福",
-	"advancements.main.evil_eye.description": "你获得了第一只恶魔之眼",
-	"advancements.main.exotic_eye.title": "亚特兰蒂斯在哪？",
-	"advancements.main.exotic_eye.description": "你获得了第一只奇异之眼",
-	"advancements.main.undead_eye.title": "灵魂之镜",
-	"advancements.main.undead_eye.description": "你获得了第一只不死之眼",
-	"advancements.main.cryptic_eye.title": "耐心是通往智慧之路",
-	"advancements.main.cryptic_eye.description": "你获得了第一只神秘之眼"
+  "item.endrem.old_eye": "远古之眼",
+  "item.endrem.old_eye.description": "§7§o其中包含着完美循环的时间",
+
+  "item.endrem.rogue_eye": "无赖之眼",
+  "item.endrem.rogue_eye.description": "§7§o奇点中的末影人",
+
+  "item.endrem.nether_eye": "锻造之眼",
+  "item.endrem.nether_eye.description": "§7§o精心制作",
+
+  "item.endrem.cold_eye": "寒冰之眼",
+  "item.endrem.cold_eye.description": "§7§o绝对零度",
+
+  "item.endrem.magical_eye": "魔力之眼",
+  "item.endrem.magical_eye.description": "§7§o精灵出品，只此一家",
+
+  "item.endrem.black_eye": "漆黑之眼",
+  "item.endrem.black_eye.description": "§7§o蕴含着无垠的空间",
+
+  "item.endrem.lost_eye": "迷离之眼",
+  "item.endrem.lost_eye.description": "§7§o迷失在无尽的图书馆中",
+
+  "item.endrem.wither_eye": "凋灵之眼",
+  "item.endrem.wither_eye.description": "§7§o它见证了毁灭",
+
+  "item.endrem.guardian_eye": "守卫者之眼",
+  "item.endrem.guardian_eye.description": "§7§o它见证了许多战士沉沦于深渊",
+
+  "item.endrem.cursed_eye": "龙之眼",
+  "item.endrem.cursed_eye.description": "§7§o回荡着黑暗巨龙的咆哮",
+
+  "item.endrem.exotic_eye": "异国之眼",
+  "item.endrem.exotic_eye.description": "§7§o那些追随这只眼睛的人再也没有被见到过；有传言说他们找到了伟大的城市亚特兰蒂斯，也有的说他们在寻找中迷失了方向",
+
+  "item.endrem.evil_eye": "邪恶之眼",
+  "item.endrem.evil_eye.description": "§7§o一件据说能保护持有者免受厄运的神圣护符",
+
+  "item.endrem.undead_eye": "不死之眼",
+  "item.endrem.undead_eye.description": "§7§o纪念那些活死人们过去的生活",
+
+  "item.endrem.cryptic_eye": "神秘之眼",
+  "item.endrem.cryptic_eye.description": "§7§o§khttps://www.youtube.com/watch?v=dQw4w9WgXcQ",
+
+  "item.endrem.corrupted_eye": "腐化之眼",
+  "item.endrem.corrupted_eye.description": "§7§o逝于孤独的贪婪国王之眼，传说它会带来无尽的财富",
+
+  "item.endrem.witch_eye": "女巫之眼",
+  "item.endrem.witch_eye.description": "§7§o据说它看到了失传的古老酿造配方",
+  "item.endrem.witch_pupil": "巫瞳",
+
+  "item.endrem.undead_soul": "不死之魂",
+
+  "block.endrem.ancient_portal_frame": "空传送门框架",
+
+  "block.endrem.ender_eye.throw_warning": "这只眼睛不知道去哪里",
+  "block.endrem.ender_eye.use_warning": "这只眼睛不想被使用",
+  "block.endrem.custom_eye.place": "这只眼睛无法被放置",
+  "block.endrem.custom_eye.frame_has_eye": "这个框架已经有了一只眼睛",
+  "block.endrem.custom_eye.broken": "这个传送门没有正确建造",
+
+
+  "itemGroup.endrem.endrem_tab": "末地重置",
+
+  "block.portal_open_sound": "传送门：开启",
+  "block.portal_open_sound.sub": "传送门：开启",
+
+  "advancements.main.root.title": "踏上征途",
+  "advancements.main.root.description": "获得你的第一颗眼",
+
+  "advancements.main.old_eye.title": "寻财者",
+  "advancements.main.old_eye.description": "获得一颗远古之眼",
+
+  "advancements.main.rogue_eye.title": "欢迎来到丛林",
+  "advancements.main.rogue_eye.description": "获得一颗无赖之眼",
+
+  "advancements.main.nether_eye.title": "凝视绝望",
+  "advancements.main.nether_eye.description": "获得一颗下界之眼",
+
+  "advancements.main.cold_eye.title": "美丽冻人",
+  "advancements.main.cold_eye.description": "获得一颗寒冰之眼",
+
+  "advancements.main.corrupted_eye.title": "绿宝石护体", "%%%%%%Comment%%%%%%": "叫黄金雨更合适，不过……",
+  "advancements.main.corrupted_eye.description": "获得一颗腐化之眼",
+
+  "advancements.main.magical_eye.title": "堕落巫师",
+  "advancements.main.magical_eye.description": "获得一颗魔力之眼",
+
+  "advancements.main.black_eye.title": "我的船在哪？",
+  "advancements.main.black_eye.description": "获得一颗漆黑之眼",
+
+  "advancements.main.lost_eye.title": "要地图吗？",
+  "advancements.main.lost_eye.description": "获得一颗迷离之眼",
+
+  "advancements.main.wither_eye.title": "万物凋零",
+  "advancements.main.wither_eye.description": "获得一颗凋灵之眼",
+
+  "advancements.main.guardian_eye.title": "现在谁才是守卫者？",
+  "advancements.main.guardian_eye.description": "获得一颗守卫者之眼",
+
+  "advancements.main.cursed_eye.title": "新的守护者……",
+  "advancements.main.cursed_eye.description": "获得一颗诅咒之眼",
+
+  "advancements.main.witch_eye.title": "不给糖就捣蛋？",
+  "advancements.main.witch_eye.description": "获得一颗女巫之眼",
+
+  "advancements.main.evil_eye.title": "真正的祝福",
+  "advancements.main.evil_eye.description": "获得一颗邪恶之眼",
+
+  "advancements.main.exotic_eye.title": "亚特兰蒂斯在哪里",
+  "advancements.main.exotic_eye.description": "获得一颗异国之眼",
+
+  "advancements.main.undead_eye.title": "灵魂的倒影",
+  "advancements.main.undead_eye.description": "获得一颗不死之眼",
+
+  "advancements.main.cryptic_eye.title": "耐心是通往智慧的道路",
+  "advancements.main.cryptic_eye.description": "获得一颗神秘之眼"
 }
