--- a/projects/1.19+/assets/sbprom/lang/zh_cn.json
+++ b/projects/1.19+/assets/sbprom/lang/zh_cn.json
@@ -1,4 +1,8 @@
 {
     "entity.sbprom.hasturmagus":"堕落的至高魔导——古玛斯",
-    "item.sbprom.gu_mas_spawn_egg":"古玛斯刷怪蛋"
+    "entity.sbprom.scarecrow":"悼草公爵",
+    "entity.sbprom.scarecrow_mythic":"悼草公爵（神话挑战）",
+    "item.sbprom.gu_mas_spawn_egg":"古玛斯刷怪蛋",
+    "item.sbprom.scarecrow_mythic_spawn_egg":"神话悼草公爵刷怪蛋",
+    "item.sbprom.scarecrow_spawn_egg":"悼草公爵刷怪蛋"
 }
